--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,16 @@ dependencies {
     implementation "io.insert-koin:koin-core:3.1.4"
     implementation "io.insert-koin:koin-android:3.1.4"
 
+    //NetWork
+    def moshiVersion = '1.12.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.moshi:moshi:$moshiVersion"
+    implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+    implementation 'com.google.code.gson:gson:2.9.0'
+
     //Lifecycle
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
